# SoundForge

./: .gitignore  Cargo.toml  README.md  miniforge.html  package.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
crates/sf-core/: Cargo.toml
crates/sf-core/benches/: seamless.rs
crates/sf-core/src/: agg.rs  capture.rs  decode.rs  edit.rs  export.rs  lib.rs  stats.rs  summary.rs
crates/sf-core/tests/: decode_integration.rs
scripts/: build.sh  mac-build.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cache.rs  lib.rs  main.rs  meter.rs  player.rs  recorder.rs
src-tauri/tests/: audio_ipc_integration.rs  bundle_config_integration.rs  cache_reaping_integration.rs
tests/ui/: lib.test.js
ui/: app.js  index.html  lib.js
