[package]
name = "soundforge"
description = "SoundForge — native audio editor with seamless selection statistics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.77.2"

[lib]
name = "soundforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
sf-core = { path = "../crates/sf-core" }
