[package]
name = "sf-core"
description = "SoundForge analysis core: seamless range statistics over huge audio via a summary pyramid"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sf_core"
path = "src/lib.rs"

[dependencies]
# Decoding + on-disk PCM cache (task 10). The pure-analysis modules (agg/summary/
# stats) stay dependency-free; only the `decode` module uses these.
symphonia = { version = "0.5", features = ["all"] }
memmap2 = "0.9"
bytemuck = "1"
# WAV encoding for export (task 17). Also used across the crate's tests to synthesize
# deterministic WAV fixtures for the decode round-trip.
hound = "3"
